--- a/css/about.css
+++ b/css/about.css
@@ -43,12 +43,13 @@ body {
     padding-top: 25px;
 }
 
-.logo{
-    background-image: url(../images/tedx_logo.png);
+.logo {
+    background-image: url(../images/tedxlogos/TEDxEkamaiIntlSchool5.png);
     background-size: contain;
     background-repeat: no-repeat;
-    width: 240px;
-    height: 50px;
+    margin-top:30px;
+    width: 360px;
+    height: 75px;
 }
 
 .link {
