--- a/css/team.css
+++ b/css/team.css
@@ -44,11 +44,12 @@ body {
 }
 
 .logo {
-    background-image: url(../images/ted-logo.png);
+    background-image: url(../images/tedxlogos/TEDxEkamaiIntlSchool5.png);
     background-size: contain;
     background-repeat: no-repeat;
-    width: 240px;
-    height: 50px;
+    margin-top:30px;
+    width: 360px;
+    height: 75px;
 }
 
 .link {
