adding speaker changes

--- a/css/speakers.css
+++ b/css/speakers.css
@@ -120,15 +120,15 @@ body {
 }
 
 .one {
-    background-image: url(../images/speakers/BrandonDcruz.jpg);
+    background-image: url(../images/speakers/PrinLao.jpg);
 }
 
 .two {
-    background-image: url(../images/speakers/LYMarlow.jpg);
+    background-image: url(../images/speakers/JoanYee.png);
 }
 
 .three {
-    background-image: url(../images/speakers/MichaelGeffert.jpg);
+    background-image: url(../images/speakers/TaskinHaque.png);
 }
 
 .four {
