--- a/css/style.css
+++ b/css/style.css
@@ -415,16 +415,16 @@ span {
 
 /* End of CSS for pop up */
 
-.brandon-dcruz {
-    background-image: url(../images/speakers/BrandonDcruz.jpg);
+.prin-lao {
+    background-image: url(../images/speakers/PrinLao.jpg);
 }
 
-.ly-marlow {
-    background-image: url(../images/speakers/LYMarlow.jpg);
+.joan-yee {
+    background-image: url(../images/speakers/JoanYee.png);
 }
 
-.michael-geffert {
-    background-image: url(../images/speakers/MichaelGeffert.jpg);
+.taskin-haque {
+    background-image: url(../images/speakers/TaskinHaque.png);
 }
 
 .shima-ghaheri {
