--- a/css/speakers.css
+++ b/css/speakers.css
@@ -132,7 +132,7 @@ body {
 }
 
 .four {
-    background-image: url(../images/speakers/ShimaGhaheri.JPG);
+    background-image: url(../images/speakers/AnasBrt.png);
 }
 
 .five {
