--- a/css/style.css
+++ b/css/style.css
@@ -427,8 +427,8 @@ span {
     background-image: url(../images/speakers/TaskinHaque.png);
 }
 
-.shima-ghaheri {
-    background-image: url(../images/speakers/ShimaGhaheri.JPG);
+.anas-brt {
+    background-image: url(../images/speakers/AnasBrt.png);
 }
 
 .skip-flanagan {
