adding new speakers

--- a/css/style.css
+++ b/css/style.css
@@ -420,7 +420,7 @@ span {
 }
 
 .joan-yee {
-    background-image: url(../images/speakers/JoanYee.png);
+    background-image: url(../images/speakers/ChrisArscott.png);
 }
 
 .taskin-haque {
@@ -431,8 +431,8 @@ span {
     background-image: url(../images/speakers/AnasBrt.png);
 }
 
-.skip-flanagan {
-    background-image: url(../images/speakers/SkipFlanagan.jpg);
+.kobchart-kb {
+    background-image: url(../images/speakers/Kobchart.png);
 }
 
 .suhail-prasathong {
